@@ -2,14 +2,12 @@
 	"tcp": ":8080",
 	"tls": ":8443",
 	"license": "zT83oDV0DWY5_JysbSTPTDr8KB0AAAAAAAAAAAAAAAI",
-	"vault": {
-		"address": "",
-		"app": ""
-	},
 	"cluster": {
-		"broadcast": "public",
-		"port": 4000,
+		"advertise": "public",
+		"route": 4000,
+		"gossip": 4001,
 		"seed": "127.0.0.1:4000",
-		"key": "emitter-io"
+		"key": "emitter-io",
+		"snapshot": "cluster.log"
 	}
 }
